ja/15.4/config/index.rst
|Fess| 設定ガイド
===============

|Fess| の設定に関する包括的なガイドです。各セクションは目的別に整理されています。

.. toctree::
   :maxdepth: 2
   :caption: はじめに

   intro

.. toctree::
   :maxdepth: 2
   :caption: 基本設定

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: クローラー設定

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: 検索機能設定

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration

.. toctree::
   :maxdepth: 2
   :caption: セキュリティ設定

   security-role
   security-virtual-host

.. toctree::
   :maxdepth: 2
   :caption: SSO設定

   sso-saml
   sso-oidc
   sso-entraid
   sso-spnego

.. toctree::
   :maxdepth: 2
   :caption: システム管理

   admin-logging
   admin-index-backup
   admin-analyzer
   admin-opensearch-dashboards
