ja/15.5/config/index.rst
|Fess| 設定ガイド
===============

|Fess| の設定に関する包括的なガイドです。各セクションは目的別に整理されています。

.. toctree::
   :maxdepth: 2
   :caption: はじめに

   intro

.. toctree::
   :maxdepth: 2
   :caption: 基本設定

   setup-port-network
   setup-memory
   setup-windows-service

.. toctree::
   :maxdepth: 2
   :caption: クローラー設定

   crawler-basic
   crawler-advanced
   crawler-thumbnail

.. toctree::
   :maxdepth: 2
   :caption: データストアコネクタ

   datastore/index

.. toctree::
   :maxdepth: 2
   :caption: 検索機能設定

   search-basic
   search-advanced
   search-geosearch
   search-scroll
   search-form-integration
   rank-fusion

.. toctree::
   :maxdepth: 2
   :caption: セキュリティ設定

   security-role
   security-virtual-host
   ldap-integration
   multitenancy

.. toctree::
   :maxdepth: 2
   :caption: SSO設定

   sso-saml
   sso-oidc
   sso-entraid
   sso-spnego

.. toctree::
   :maxdepth: 2
   :caption: LLM/AI検索モード設定

   llm-overview
   llm-ollama
   llm-openai
   llm-gemini
   rag-chat

.. toctree::
   :maxdepth: 2
   :caption: スクリプティング

   scripting-overview
   scripting-groovy

.. toctree::
   :maxdepth: 2
   :caption: パフォーマンス・運用

   rate-limiting
   load-control

.. toctree::
   :maxdepth: 2
   :caption: システム管理

   admin-logging
   admin-index-backup
   admin-index-export
   admin-analyzer
   admin-opensearch-dashboards
